--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-<<<<<<< Updated upstream
-body{
-  
-=======
-/*div{
->>>>>>> Stashed changes
-    color: azure;
+
+
+.name{
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.log2{
+    width: 100px;
+
 }
